# FR_ST_Final

./: .gitattributes  .gitignore
11/: .gitignore
11/config/: .gitignore  README.md  bulkTesting.ipynb  create_template_multiple_images_single_face.json  dependencyCheck.py  fr.py  fr_old.py  lfw_testing.json  main.py  requirements.txt  typing_extensions.py  zipp.py
11/config/Markdown-3.3.7.dist-info/: METADATA  RECORD
11/config/PIL/: ImageFile.py  _version.py
11/config/Pillow-9.1.1.dist-info/: METADATA  RECORD
11/config/Pillow.libs/: libXau-00ec42fe.so.6.0.0  libfreetype-27ef11b8.so.6.18.3  libharfbuzz-17f91c2d.so.0.40201.0  libjpeg-1b553ed5.so.62.3.0  liblcms2-1e643a89.so.2.0.13  liblzma-d540a118.so.5.2.5  libopenjp2-fca9bf24.so.2.5.0  libpng16-52f22300.so.16.37.0  libtiff-d0580107.so.5.7.0  libwebp-8efe125f.so.7.1.3  libwebpdemux-016472e8.so.2.0.9  libwebpmux-5c00cf3e.so.3.0.8  libxcb-1122e22b.so.1.1.0
11/config/Werkzeug-2.1.2.dist-info/: METADATA  RECORD
11/config/absl_py-1.0.0.dist-info/: RECORD
11/config/alignment/: alignmentMain.py  utils.py
11/config/attr/: __init__.py  __init__.pyi  _cmp.py  _cmp.pyi  _compat.py  _config.py  _funcs.py  _make.py  _next_gen.py  _version_info.py  converters.py  converters.pyi  exceptions.py  filters.py  filters.pyi  setters.py  setters.pyi  validators.py  validators.pyi
11/input/: enroll.txt  match.txt  match_multiperson.txt  verif.txt  verif_multiperson.txt
11/scripts/: compile_and_link.sh
11/src/first_implementation/: CMakeLists.txt  firstimplfrvt11.cpp  firstimplfrvt11.h
common/scripts/: utils.sh
(+6310 files in other folders)
